Fixed: flexbox alignments on Colophon and Home pages

--- a/css/ncoda/julius.less
+++ b/css/ncoda/julius.less
@@ -71,7 +71,7 @@ body {
 /* The loading screen, shown before PyPy.js and Verovio are compiled. */
 
 #ncoda-loading {
-    height: 100%;
+    flex: 1 1;
     display: flex;
     flex-flow: column;
     justify-content: space-around;
@@ -97,7 +97,7 @@ h2, h3 {
 /* The colophon, "about nCoda." */
 
 #ncoda-colophon {
-    height: 100%;
+    flex: 1 1;
     display: flex;
     flex-flow: column;
     justify-content: space-around;
